Basic ExtendedHTML component 'Arc'

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 </head>
 
 <body>
-  Hi!
-  <x-button>Ola!</x-button>
+  <div>The attributes of the button can be changed to trigger re-render</div>
+  <x-button disabled>X-Button</x-button>
   <script src="build/bundle.js"></script>
-  <!-- <script src="index.js"></script> -->
 </body>
 
 </html>
